Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6117

CONNECT: misleading warning

    XMLWordPrintable

Details

    Description

      MariaDB [test]> CREATE TABLE t (a INT) ENGINE=CONNECT TABLE_TYPE=csv;
      Query OK, 0 rows affected, 1 warning (0.18 sec)
       
      Warning (Code 1105): No file name. Table will use t.csv
      MariaDB [test]> INSERT INTO t VALUES (1);
      Query OK, 1 row affected (0.00 sec)
       
      MariaDB [test]> ALTER TABLE t TABLE_TYPE=fmt;
      ERROR 1296 (HY000): Got error 174 'Writing FMT files is not implemented yet' from CONNECT
      Warning (Code 1105): Congratulation, you just created a read-only void table!
      Error (Code 1296): Got error 174 'Writing FMT files is not implemented yet' from CONNECT
      MariaDB [test]> SHOW CREATE TABLE t;
      +-------+--------------------------------------------------------------------------------------------------------+
      | Table | Create Table                                                                                           |
      +-------+--------------------------------------------------------------------------------------------------------+
      | t     | CREATE TABLE `t` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=CONNECT DEFAULT CHARSET=latin1 `TABLE_TYPE`=csv |
      +-------+--------------------------------------------------------------------------------------------------------+
      1 row in set (0.00 sec)

      The error is ok. But the warning 'Congratulation, you just created a read-only void table!' is misleading in this case. Since the table is not empty, one could think a disaster occurred.

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            f_razzoli Federico Razzoli
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.