- FIX a bug causing libxml2 not retrieving expanded multiple column values.   This was working but the cause probably comes from freeing Xop object to   handle memory leaks reported by Valgrind.   Also add a test case on XML multiple tables. added:   storage/connect/mysql-test/connect/r/xml_mult.result   storage/connect/mysql-test/connect/std_data/bookstore.xml   storage/connect/mysql-test/connect/t/xml_mult.test modified:   storage/connect/domdoc.cpp   storage/connect/tabxml.cpp   storage/connect/tabxml.h

- Enhance the index types and flages returning functions.
modified:
  storage/connect/ha_connect.cc
  storage/connect/ha_connect.h

- Suppress irrelevant warning message (MDEV-6117)
modified:
  storage/connect/ha_connect.cc