storage/connect/ha_connect.cc
@@ -621,7 +621,7 @@ TABTYPE ha_connect::GetRealType(PTOS pos)
 {
   TABTYPE type;
   
-  if (pos || (pos= GetTableOptionStruct(table))) {
+  if (pos || (pos= GetTableOptionStruct())) {
     type= GetTypeID(pos->type);
 
     if (type == TAB_UNDEF)
@@ -634,6 +634,50 @@ TABTYPE ha_connect::GetRealType(PTOS pos)
 } // end of GetRealType
 
 /** @brief
+  The name of the index type that will be used for display.
+  Don't implement this method unless you really have indexes.
+ */
+const char *ha_connect::index_type(uint inx) 
+{ 
+  switch (GetIndexType(GetRealType())) {
+    case 1: return "XPLUG";
+    case 2: return "REMOTE";
+    } // endswitch
+
+  return "Unknown";
+} // end of index_type
+
+/** @brief
+  This is a bitmap of flags that indicates how the storage engine
+  implements indexes. The current index flags are documented in
+  handler.h. If you do not implement indexes, just return zero here.
+
+    @details
+  part is the key part to check. First key part is 0.
+  If all_parts is set, MySQL wants to know the flags for the combined
+  index, up to and including 'part'.
+*/
+ulong ha_connect::index_flags(uint inx, uint part, bool all_parts) const
+{
+  ulong       flags= HA_READ_NEXT | HA_READ_RANGE |
+                     HA_KEYREAD_ONLY | HA_KEY_SCAN_NOT_ROR;
+  ha_connect *hp= (ha_connect*)this;
+  PTOS        pos= hp->GetTableOptionStruct();
+
+  if (pos) {
+    TABTYPE type= hp->GetRealType(pos);
+
+    switch (GetIndexType(type)) {
+      case 1: flags|= (HA_READ_ORDER | HA_READ_PREV); break;
+      case 2: flags|= HA_READ_AFTER_KEY;              break;
+      } // endswitch
+
+    } // endif pos
+
+  return flags;
+} // end of index_flags
+
+/** @brief
   This is a list of flags that indicate what functionality the storage
   engine implements. The current table flags are documented in handler.h
 */
@@ -641,14 +685,14 @@ ulonglong ha_connect::table_flags() const
 {
   ulonglong   flags= HA_CAN_VIRTUAL_COLUMNS | HA_REC_NOT_IN_SEQ |
                      HA_NO_AUTO_INCREMENT | HA_NO_PREFIX_CHAR_KEYS |
-//                   HA_BINLOG_ROW_CAPABLE | HA_BINLOG_STMT_CAPABLE |
+                     HA_BINLOG_ROW_CAPABLE | HA_BINLOG_STMT_CAPABLE |
                      HA_PARTIAL_COLUMN_READ | HA_FILE_BASED |
 //                   HA_NULL_IN_KEY |    not implemented yet
 //                   HA_FAST_KEY_READ |  causes error when sorting (???)
                      HA_NO_TRANSACTIONS | HA_DUPLICATE_KEY_NOT_IN_ORDER |
                      HA_NO_BLOBS | HA_MUST_USE_TABLE_CONDITION_PUSHDOWN;
   ha_connect *hp= (ha_connect*)this;
-  PTOS        pos= hp->GetTableOptionStruct(table);
+  PTOS        pos= hp->GetTableOptionStruct();
 
   if (pos) {
     TABTYPE type= hp->GetRealType(pos);
@@ -719,10 +763,11 @@ char *GetListOption(PGLOBAL g, const char *opname,
 /****************************************************************************/
 /*  Return the table option structure.                                      */
 /****************************************************************************/
-PTOS ha_connect::GetTableOptionStruct(TABLE *tab)
+PTOS ha_connect::GetTableOptionStruct(TABLE_SHARE *s)
 {
-  return (tshp) ? tshp->option_struct : 
-    (tab) ? tab->s->option_struct : NULL;
+  TABLE_SHARE *tsp= (tshp) ? tshp : (s) ? s : table_share;
+
+  return (tsp) ? tsp->option_struct : NULL;
 } // end of GetTableOptionStruct
 
 /****************************************************************************/
@@ -731,7 +776,7 @@ PTOS ha_connect::GetTableOptionStruct(TABLE *tab)
 char *ha_connect::GetStringOption(char *opname, char *sdef)
 {
   char *opval= NULL;
-  PTOS  options= GetTableOptionStruct(table);
+  PTOS  options= GetTableOptionStruct();
 
   if (!options)
     ;
@@ -803,10 +848,10 @@ bool ha_connect::GetBooleanOption(char *opname, bool bdef)
 {
   bool  opval= bdef;
   char *pv;
-  PTOS  options= GetTableOptionStruct(table);
+  PTOS  options= GetTableOptionStruct();
 
   if (!stricmp(opname, "View"))
-    opval= (tshp) ? tshp->is_view : table->s->is_view;
+    opval= (tshp) ? tshp->is_view : table_share->is_view;
   else if (!options)
     ;
   else if (!stricmp(opname, "Mapped"))
@@ -834,7 +879,7 @@ bool ha_connect::GetBooleanOption(char *opname, bool bdef)
 /****************************************************************************/
 bool ha_connect::SetBooleanOption(char *opname, bool b)
 {
-  PTOS options= GetTableOptionStruct(table);
+  PTOS options= GetTableOptionStruct();
 
   if (!options)
     return true;
@@ -854,7 +899,7 @@ int ha_connect::GetIntegerOption(char *opname)
 {
   ulonglong opval= NO_IVAL;
   char     *pv;
-  PTOS      options= GetTableOptionStruct(table);
+  PTOS      options= GetTableOptionStruct();
 
   if (!options)
     ;
@@ -891,7 +936,7 @@ int ha_connect::GetIntegerOption(char *opname)
 /****************************************************************************/
 bool ha_connect::SetIntegerOption(char *opname, int n)
 {
-  PTOS options= GetTableOptionStruct(table);
+  PTOS options= GetTableOptionStruct();
 
   if (!options)
     return true;
@@ -1153,7 +1198,7 @@ const char *ha_connect::GetDBName(const char* name)
 
 const char *ha_connect::GetTableName(void)
 {
-  return (tshp) ? tshp->table_name.str : table->s->table_name.str;
+  return (tshp) ? tshp->table_name.str : table_share->table_name.str;
 } // end of GetTableName
 
 #if 0
@@ -3310,7 +3355,7 @@ int ha_connect::external_lock(THD *thd, int lock_type)
   int     rc= 0;
   bool    xcheck=false, cras= false;
   MODE    newmode;
-  PTOS    options= GetTableOptionStruct(table);
+  PTOS    options= GetTableOptionStruct();
   PGLOBAL g= GetPlug(thd, xp);
   DBUG_ENTER("ha_connect::external_lock");
 
@@ -4550,7 +4595,7 @@ int ha_connect::create(const char *name, TABLE *table_arg,
 
   DBUG_ENTER("ha_connect::create");
   int  sqlcom= thd_sql_command(table_arg->in_use);
-  PTOS options= GetTableOptionStruct(table_arg);
+  PTOS options= GetTableOptionStruct(table_arg->s);
 
   table= table_arg;         // Used by called functions
 
@@ -4885,7 +4930,7 @@ int ha_connect::create(const char *name, TABLE *table_arg,
     } else
       ::close(h);
     
-    if (type == TAB_FMT || options->readonly)
+    if ((type == TAB_FMT || options->readonly) && sqlcom == SQLCOM_CREATE_TABLE)
       push_warning(thd, Sql_condition::WARN_LEVEL_WARN, 0,
         "Congratulation, you just created a read-only void table!");
 
@@ -5123,7 +5168,6 @@ ha_connect::check_if_supported_inplace_alter(TABLE *altered_table,
   int             sqlcom= thd_sql_command(thd);
   TABTYPE         newtyp, type= TAB_UNDEF;
   HA_CREATE_INFO *create_info= ha_alter_info->create_info;
-//PTOS            pos= GetTableOptionStruct(table);
   PTOS            newopt, oldopt;
   xp= GetUser(thd, xp);
   PGLOBAL         g= xp->g;
